--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tkpm-user-api",
+  "name": "ktpm-user-api",
   "version": "1.0.0",
   "description": "",
   "main": "src/app.ts",
@@ -8,7 +8,7 @@
     "build": "npx rimraf \"./dist\" && tsc --build",
     "build:f": "npx tsc --build --force",
     "watch": "npx tsc -w",
-    "start": "npx cross-env NODE_ENV=production & npx tsc & node dist/app.js",
+    "start": "npx cross-env NODE_ENV=production pm2 --no-daemon start dist/app.js",
     "debug": "npx cross-env NODE_ENV=development ts-node src/app.ts",
     "debug:prod": "npx cross-env NODE_ENV=production ts-node src/app.ts"
   },
