--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "npx rimraf \"./dist\" && tsc --build",
     "build:f": "npx tsc --build --force",
     "watch": "npx tsc -w",
-    "start": "npx tsc & node dist/app.js",
+    "start": "tsc & node dist/app.js",
     "debug": "npx cross-env NODE_ENV=development ts-node src/app.ts",
     "debug:prod": "npx cross-env NODE_ENV=production ts-node src/app.ts"
   },
